# CoTWebTest

./: .env.example  .gitignore  README.md  check_ims5.py  pyproject.toml
app/: __init__.py  compare_final_summary.py  config.py  data_repository.py  gen_final_summary.py  llm.py  main.py  models.py  prompt_renderer.py  prompt_store.py  similarity_prompt.py
app/static/: app.js  styles.css
app/templates/: compare.html  gen.html  index.html
cot_web_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/base/: system.md  user.md
tests/: conftest.py  test_api.py  test_data_repository.py  test_prompt_renderer.py  test_prompt_store.py
